# simpleFastApi

./: .dockerignore  Dockerfile  database.py  docker-compose.yml  pyproject.toml
routers/: route_todo.py
