[tool.poetry]
name = "fast-api-sample"
version = "0.1.0"
description = ""
authors = ["k.fujii <k.fujii.engr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.105.0"
uvicorn = "^0.25.0"
fastapi-csrf-protect = "^0.3.3"
motor = "^3.3.2"
pyjwt = "^2.8.0"
passlib = "^1.7.4"
python-decouple = "^3.8"
dnspython = "^2.4.2"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
